# PaperDigestMono

./: .gitignore  .gitmodules  AGENTS.md  README.md  pyproject.toml
config/: example.toml  template.j2
devdoc/: 2025-10-19-handover-audit.md  README.md  architecture.md  data-storage.md  env.md  progress-2025-10-evaluation.md  reference-survey.md  rool.md
devdoc/testing/: full-pipeline.md
devdoc/todo/: TODO-backup-automation.md  TODO-config-observability.md  TODO-scheduler-observability.md  TODO-web-console-ui.md
devlog/: 2025-02-11-scheduler-observability.md  2025-10-01-architecture-review.md  2025-10-02-config-refactor-plan.md  2025-10-02-embedding-backend-refactor.md  2025-10-02-ingestion-embedding-migration.md  2025-10-02-json-schema-detection-plan.md  2025-10-02-pr-merge-plan.md  2025-10-02-real-data-recommend-summary-plan.md  2025-10-02-summary-llm-integration-plan.md  2025-10-02-summary-real-data-plan.md  2025-10-02-summary-storage-docs-plan.md  2025-10-02-todo-expansion-plan.md  2025-10-03-docs-refactor-plan.md  2025-10-03-latex-context-plan.md  2025-10-03-legacy-roadmap.md  2025-10-03-migration-plan.md  2025-10-03-real-llm-api-fix.md  2025-10-03-recommend-dataflow-correction.md  2025-10-03-w1-ingestion.md  2025-10-03-w2-embedding.md  2025-10-03-w3-recommend.md  2025-10-03-w4-summary.md  2025-10-03-w5-publishing.md  2025-10-03-w6-orchestration.md  2025-10-03-w7-wrapup.md  2025-10-04-pytest-cleanup.md  2025-10-04-reference-scripts-check.md  2025-10-04-task-reflection.md  2025-10-05-cli-cleanup-plan.md  2025-10-06-cli-standard-tests-plan.md  2025-10-07-cli-command-tests-plan.md  2025-10-08-data-migration-plan.md  2025-10-09-migration-tool-implementation.md  2025-10-10-summary-config-refine.md  2025-10-11-migration-cli-validation.md  2025-10-12-embedding-service-refactor-plan.md  2025-10-20-embedding-storage-eval.md  2025-10-21-embedding-backend-refactor.md  2025-10-21-infinity-numpy2-compatibility-test.md  2025-10-21-infinity-removal.md  (+8 more)
embeddings/conan_v1/: 2024.parquet
papersys/: __init__.py  cli.py
papersys/backup/: __init__.py  service.py  uploader.py
papersys/config/: __init__.py  app.py  backup.py  base.py  embedding.py  ingestion.py  inspector.py  llm.py  publishing.py  recommend.py  scheduler.py  summary.py  utils.py  web.py
papersys/embedding/: __init__.py  service.py
papersys/feedback/: service.py
papersys/ingestion/: __init__.py  client.py  service.py
papersys/migration/: __init__.py  legacy.py
papersys/recommend/: __init__.py  data.py  pipeline.py  predictor.py  trainer.py
papersys/scheduler/: __init__.py  service.py
papersys/summary/: __init__.py  conversion.py  fetcher.py  generator.py  models.py  pdf.py  pipeline.py  renderer.py
papersys/web/: app.py
reference/NotionAPI/: working_with_comments.md  working_with_database.md  working_with_files.md  working_with_page_content.md
scripts/: build_site.py  fetch_feedback.py  inspect_oai_window.py  run_embedding_sample.py  run_ingestion_sample.py  run_real_full_pipeline.py  run_recommend_sample.py  run_summary_sample.py  test_real_gemini_api.py
scripts/experiments/: embedding_storage_eval.py
scripts/maintenance/: clean_embedding_dimensions.py
tests/: conftest.py  utils.py
tests/backup/: test_backup_service.py  test_uploader.py
tests/cli/: test_cli_commands.py  test_cli_config.py  test_cli_migrate.py  test_cli_serve.py  test_cli_status.py  utils.py
tests/config/: test_embedding_config.py  test_ingestion_config.py  test_llm_config.py  test_load_config.py  test_recommend_config.py  test_summary_config.py
tests/embedding/: test_embedding_service.py
tmp/: codebase_search_results.json  flagged_test_files.txt  flagged_tests.txt  pytest_final_durations.txt  pytest_safe_durations.txt  pytest_sampled_durations.txt  safe_test_files.txt  slow_tests_report.json  slow_tests_report.md  slow_tests_sampled_report.json  slow_tests_sampled_report.md
(+33 files in other folders)
