[project]
name = "paperdigestmono"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.0",
    "fastapi>=0.118.0",
    "filelock>=3.18.0",
    "huggingface-hub[hf-xet]>=0.31.1",
    "jinja2>=3.1.6",
    "latex2json",
    "loguru>=0.7.3",
    "numpy>=2.3.3",
    "openai>=1.78.1",
    "polars>=1.33.1",
    "pydantic>=2.11.9",
    "pytest>=8.4.2",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.1.1",
    "timeout-decorator>=0.5.0",
    "toml>=0.10.2",
    "torch>=2.8.0",
    "uvicorn>=0.37.0",
]

[project.optional-dependencies]
# Note: vLLM has strict version constraints and may conflict with torch/numpy versions
# Install manually if needed: uv pip install vllm --no-deps
vllm = []

[tool.uv.sources]
latex2json = { git = "https://github.com/mrlooi/latex2json.git" }

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
addopts = "--ignore=reference"
