[project]
name = "paperdigestmono"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.0",
    "duckdb>=1.4.1",
    "fastapi>=0.118.0",
    "filelock>=3.18.0",
    "google-auth>=2.41.1",
    "huggingface-hub[hf-xet]>=0.31.1",
    "jinja2>=3.1.6",
    "latex2json",
    "litellm>=1.77.5",
    "loguru>=0.7.3",
    "marker-pdf>=1.10.1",
    "numcodecs==0.12.1",
    "numpy>=2.2.0,<2.3", # Constrained by numba 0.61.2 (required by vllm 0.10.2)
    "openai>=1.78.1",
    "polars>=1.33.1",
    "pyarrow>=17.0.0",
    "pydantic>=2.11.9",
    "pytest>=8.4.2",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.1.1",
    "timeout-decorator>=0.5.0",
    "toml>=0.10.2",
    "torch>=2.8.0",
    "typer>=0.19.2",
    "uvicorn>=0.37.0",
    "vllm>=0.10.2",
    "wrapt-timeout-decorator>=1.5.1",
    "zarr==2.16.1",
    "zfpy>=0.5.5",
]

[project.scripts]
papersys = "papersys.cli:app"

[tool.setuptools.packages.find]
include = ["papersys*"]

[project.optional-dependencies]
# vLLM for large embedding models (e.g., Qwen3-Embedding-0.6B for jasper_v1)
# Install with: uv sync --extra vllm
vllm = [
    "vllm>=0.10.2",
]

[tool.uv]
package = true
# Use vLLM's official wheel repository for compatible builds
[[tool.uv.index]]
name = "vllm"
url = "https://wheels.vllm.ai/0.10.2/"
explicit = true

[tool.uv.sources]
vllm = [
    { index = "vllm" },
]
latex2json = { git = "https://github.com/mrlooi/latex2json.git" }

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
addopts = "--ignore=reference"
